Bug 1637057 - Part 1: Ensure that ChromeFlags are propagated consistently between content owners, r=kmag

Differential Revision: https://phabricator.services.mozilla.com/D75610